--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ h1 a.navbar-brand {
 
 section.featured {
 	padding: 200px 0 60px;
-	background: #70B9B0;
+	background: #050c3f;
 	color: #fdfdfd;
 }
 
